# trident_trader

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/agents/: docs-maintainer.md
docs/: DAY_TRADER_REVIEW.md  LIVE_TRADING.md  ROADMAP.md  ROADMAP_PROGRESS.md
scripts/: backfill_daily.py  backtest.py  compare.py  deadman.py  paper_run.py  postgres_up.sh  replay.py  run_dashboard.py  run_shadow_scheduled.sh  screen.py  shadow_run.py  smoke_test.py  start.sh  stop.sh  suggest.py
src/trident/: cli.py  clock.py  settings.py  watchlist.py
src/trident/accounting/: round_trip.py
src/trident/audit/: log.py
src/trident/backtest/: compare.py  costs.py  engine.py  persistence.py  simulator.py  stats.py  walk_forward.py
src/trident/dashboard/: alpaca_view.py  app.py  settings_io.py
src/trident/data/: bars.py  feed.py  (+2 more)
tests/unit/: fakes.py  test_alpaca_broker.py  test_alpaca_view_quotes.py  test_backtest_compare.py  test_backtest_engine.py  test_bars.py  test_bars_backfill.py  test_bracket_orders.py  test_broker_protocol.py  test_clock.py  test_costs.py  test_dashboard_research.py  test_eod_flatten.py  test_feed.py  test_manage.py  test_management.py  test_management_orders.py  test_orb.py  test_risk_gate.py  test_round_trip.py  test_screen_presets.py  test_screener.py  test_screener_fmp.py  test_settings.py  test_simulator.py  test_sizing.py  test_stats.py  test_strategy_registry.py  test_suggest.py  test_tracking.py  test_vwap_reversion.py  test_walk_forward.py  test_watchlist.py  test_watchlist_store.py
(+80 files in other folders)
